# zephyr-out-of-tree

./: .gitignore  CMakeLists.txt  Kconfig  Kconfig.defconfig  icm20649-dtsdoc.txt  icm20649.c  icm20649.h  icm20649_trigger.c  isb_power.c  pinmux.c  scanimetrics_witap_isb.dts  scanimetrics_witap_isb_defconfig
drivers/: CMakeLists.txt  Kconfig
drivers/adc/: CMakeLists.txt  Kconfig  Kconfig.ads111x  adc_ads111x.c  adc_ads111x.h
drivers/flash/: CMakeLists.txt  Kconfig  Kconfig.nand  spi_nand.c  spi_nand.h  spi_nand_shell.c
drivers/fram/: CMakeLists.txt  Kconfig  Kconfig.fram  fram_handlers.c  fram_mb85rs.c  fram_mb85rs.h  fram_shell.c
drivers/i2c/: CMakeLists.txt  Kconfig  i2c_sam0.c
drivers/modem/: CMakeLists.txt  Kconfig  Kconfig.murata-lora-cmwx1zzabz  murata-lora-cmwx1zzabz-socket.c  murata-lora-cmwx1zzabz.c  secret.h  unused at commands.c
drivers/sensor/: CMakeLists.txt  Kconfig
drivers/serial/: CMakeLists.txt  Kconfig  uart_sam0.c
drivers/timer/: CMakeLists.txt  Kconfig  sam0_rtc.c  sam0_rtc_timer.c
dts/bindings/: atmel,sam0-gclk.yaml  gpio.yaml  murata,lora.yaml  scanimetrics,samd2x-gclkgen.yaml  scanimetrics,samd5x-dfll.yaml  scanimetrics,samd5x-dpll.yaml  scanimetrics,samd5x-gclkgen.yaml  (+8 more)
witap/: CMakeLists.txt  CayenneLPP.cpp  CayenneLPP.h  Kconfig  log_backend_file.c  log_backend_file.h  sam0_rtc.c  sam0_rtc.h  settings_shell.c  witap_dock.h  witap_isb.h  witap_led.c  witap_led.h  witap_log.hpp  witap_log_backend.c  witap_mkr.h  witap_power.cpp  witap_power.hpp  witap_settings.c  witap_settings.h  witap_shell.hpp  witap_strings.h  witap_types.h
(+71 files in other folders)
